# BigData

./: .gitignore  codegen_airbnb.java  codegen_transactions.java  pyproject.toml  requirements.txt
models/models/model1/data/: part-00000-398aa65e-f950-4063-9874-7205bbbcc1b6-c000.snappy.parquet
models/models/model1/metadata/: part-00000
models/models/model2/data/data/: part-00000-fbb77a2f-3bdb-434a-b1ce-f5047248a456-c000.snappy.parquet  part-00001-fbb77a2f-3bdb-434a-b1ce-f5047248a456-c000.snappy.parquet
models/models/model2/data/metadata/: part-00000
models/models/model2/metadata/: part-00000
models/models/pipeline/metadata/: part-00000
models/models/pipeline/stages/00_StringIndexer_61b21966e862/data/: part-00000-811f854d-b940-4826-8684-8e065198076d-c000.snappy.parquet
models/models/pipeline/stages/00_StringIndexer_61b21966e862/metadata/: part-00000
models/models/pipeline_model/metadata/: part-00000
notebooks/: Untitled.ipynb  Untitled1.ipynb  pipeline.ipynb
output/: .evaluation.csv.crc  .model1_predictions.csv.crc  .model2_predictions.csv.crc  evaluation.csv  model1_predictions.csv  model2_predictions.csv
scripts/: build_elasticsearch.py  build_projectdb.py  comprasion.py  data_collection.sh  db_es.hql  es_status.py  es_status.sh  model.py  model1_train.py  model2_train.py  pipeline.py  preprocess.py  stage1.sh  stage2.sh  stage3.sh  stage4.sh
sql/: create_tables.sql  db_es.hql  db_sql.hql  db_sql_with_clusters.hql  es_query.py  import_data.sql  q1.hql  q2.hql  q3.hql  q4.hql  q5.hql  q6.hql  spark_sql.py  test_database.sql
(+85 files in other folders)
